--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -7,6 +7,46 @@
     <title>LAYOUT</title>
     <link rel="stylesheet" href="./style.css">
   </head>
+
+  <!-- <header>
+    <div class="header">
+      <ul class="left-links">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Store</a></li>
+      </ul>
+      <ul class="right-links">
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Settings</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <body>
+    <div class="content">
+      <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+      <div class="input">
+        <input type="text">
+      </div>
+      <div class="buttons">
+        <button>Do the thing!</button>
+        <button>Do the other thing!</button>
+      </div>
+    </div>
+  </body>
+
+  <footer>
+    <div class="footer">
+      <ul class="left-links">
+        <li><a href="#">Advertising</a></li>
+        <li><a href="#">Business</a></li>
+      </ul>
+      <ul class="right-links">
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </div>
+  </footer> -->
+
   <body>
     <div class="header">
       <ul class="left-links">
@@ -18,6 +58,7 @@
         <li><a href="#">Settings</a></li>
       </ul>
     </div>
+
     <div class="content">
       <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
       <div class="input">
@@ -28,6 +69,7 @@
         <button>Do the other thing!</button>
       </div>
     </div>
+
     <div class="footer">
       <ul class="left-links">
         <li><a href="#">Advertising</a></li>
